Fix product line item spacing.

--- a/packages/components/src/components/ui/product-line-item/sc-product-line-item.scss
+++ b/packages/components/src/components/ui/product-line-item/sc-product-line-item.scss
@@ -93,6 +93,7 @@
 .item__remove {
   cursor: pointer;
   color: var(--sc-color-gray-400);
+  margin-bottom: var(--sc-spacing-medium);
 }
 
 .actions__divider {
